<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CalculatorActivity" >

    <TextView
        android:id="@+id/textViewOutput"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="12dp"
        android:textIsSelectable="true"
        android:hint="@string/outputHint"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/buttonCalculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextInputB"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/radioGroup"
        android:layout_marginBottom="16dp"
        android:text="@string/buttonCalculate" />

    <EditText
        android:id="@+id/editTextInputA"
        android:layout_width="@dimen/inputNumberWidth"
        android:layout_height="wrap_content"
        android:layout_above="@+id/radioGroup"
        android:layout_alignLeft="@+id/textViewOutput"
        android:layout_marginBottom="27dp"
        android:hint="@string/inputHint"
        android:inputType="number"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical" >

        <RadioButton
            android:id="@+id/radioButtonPlus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioButtonAdd" />

        <RadioButton
            android:id="@+id/radioButtonMinus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioButtonSubtract" />

        <RadioButton
            android:id="@+id/radioButtonMultiply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioButtonMultiply" />

        <RadioButton
            android:id="@+id/radioButtonDivide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioButtonDivide" />
    </RadioGroup>

    <EditText
        android:id="@+id/editTextInputB"
        android:layout_width="@dimen/inputNumberWidth"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextInputA"
        android:layout_below="@+id/radioGroup"
        android:layout_marginTop="16dp"
        android:hint="@string/inputHint"
        android:inputType="number"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>